# django-learning

storefront/: main.py  pyproject.toml  store_customer.sql
storefront/core/: admin.py  apps.py  serializers.py
storefront/core/migrations/: 0001_initial.py
storefront/playground/: tasks.py  urls.py  views.py
storefront/playground/templates/: hello.html
storefront/store/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
storefront/store/migrations/: 0001_initial.py  0002_alter_cartitem_quantity_and_more.py  0002_rename_price_product_unit_price.py  0003_alter_customer_options_remove_customer_first_name_and_more.py  0003_product_slug.py  0004_alter_customer_membership.py  0004_remove_customer_email.py  0005_alter_customer_birth_date.py  0005_remove_promotion_featured_product_and_more.py  0006_alter_order_options.py  0006_alter_orderitem_order.py  0007_alter_collection_options_alter_customer_options_and_more.py  0007_alter_customer_options_alter_product_promotions_and_more.py
storefront/store/signals/: handlers.py
storefront/store/static/store/: styles.css
storefront/storefront/: settings.py  urls.py
storefront/tags/: admin.py  models.py
storefront/tags/migrations/: 0001_initial.py
